# persistent

persistent-postgresql/Database/Persist/: Postgresql.hs
persistent-template/Database/Persist/: TH.hs
test/: Main.hs  Model.hs  db.sql  test.cabal
