name:                test
version:             0.1.0.0
synopsis:            test
license:             PublicDomain
author:              Adam Bergmark
maintainer:          adam@edea.se
build-type:          Simple
cabal-version:       >=1.8

executable test
  main-is: Main.hs
  ghc-options: -Wall
  build-depends:
      base
    , persistent
    , persistent-postgresql
    , persistent-template
